# fontys-llm-lab-2025

./: .dockerignore  .gitignore  Dockerfile  README.md  chat.py  check_gpu_usage.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  train.py
